<resources>
    <string name="app_name">course-project-autotrace</string>
    <string name="register_your_vehicle">Register Your Vehicle</string>
    <string name="dd_mm_yy">DD/MM/YY</string>
    <string name="enter_your_license_plate">Enter your License Plate</string>
    <string name="enter_your_last_name">Enter your Last Name</string>
    <string name="register_vehicle">Register Vehicle</string>
    <string name="logo">Logo</string>
    <string name="enter_your_date_of_birth">Enter your Date of Birth</string>
    <string name="profile_screen">Profile Screen</string>
    <string name="home_buttom">Home Buttom</string>
    <string name="car_info_screen">Car Info Screen</string>
    <string name="traffic_violation_tab">Traffic Violation Tab</string>
    <string name="back_button">Back Button</string>
    <string name="enter_license_plate_number">Enter License Plate Number</string>
    <string name="todo">TODO</string>
    <string name="move_to_register_vehicle">Move to Register Vehicle</string>
    <string name="home">Home</string>
    <string name="tesla_model_3">Tesla Model 3</string>
    <string name="_2022">2022</string>
    <string name="midsize_suv">Midsize SUV</string>
    <string name="toyota_rav_4">Toyota Rav 4</string>
    <string name="electric_sedan">Electric Sedan</string>
    <string name="add_vehicle_button">Add Vehicle Button</string>
    <string name="car_image">Car Image</string>
    <string name="basic_car_information">Basic Car Information</string>
    <string name="model_year">Model Year</string>
    <string name="name">Name</string>
    <string name="car_information">Car Information</string>
    <string name="or">OR</string>
    <string name="log_into_your_account">Log into your account</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="access_basic_car_info">Access basic car info</string>
    <string name="enter_license_plate">Enter License Plate</string>
    <string name="forgot_password">Forgot Password</string>

    <string name="driver_jiseong_zaza">Driver: Jiseong Zaza</string>
    <string name="year_2018">Year: 2018</string>
    <string name="insurance_information">Insurance Information</string>
    <string name="traffic_violations">Traffic Violations</string>
    <string name="red_light_violation">Red Light Violation</string>
    <string name="july_10_2023">July 10 2023</string>
    <string name="bloor_and_sherbourne">Bloor and Sherbourne</string>
    <string name="parking_ticket">Parking Ticket</string>
    <string name="june_15_2023">June 15 2023</string>
    <string name="college_and_st_george">College and St George</string>

    <string name="confirm_your_password">Confirm Your Password</string>
    <string name="enter_your_full_name">Enter your full name</string>
    <string name="create_your_account">Create Your Account</string>
    <string name="let_s_go">Let\'s Go</string>
    <string name="driver_s_license">Driver\'s License</string>
    <string name="enter_your_driver_s_license">Enter your Driver\'s License</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="_300">$300</string>
    <string name="refresh_button">Refresh button</string>
    <string name="description">Description</string>
    <string name="navbar">NavBar</string>
    <string name="enter_your_email2">Enter Your Email</string>
    <string name="enter_your_email1">Enter Your Email</string>
</resources>