<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BasicCarInfo">
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/basic_car_information"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="60dp"
        app:layout_goneMarginTop="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:id="@+id/ll1"

        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@id/textView"

        android:orientation="horizontal">

        <EditText
            android:id="@+id/CarName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:background="@drawable/roundedrectangle"
            android:gravity="center"
            android:hint="@string/name"
            android:inputType="textEmailAddress"
            android:paddingStart="16dp"
            android:paddingTop="12dp"
            android:paddingEnd="16dp"
            android:paddingBottom="12dp"
            android:textColorHint="#78909C"
            android:autofillHints="" />

        <EditText
            android:id="@+id/ModelYear"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="16dp"
            android:hint="@string/model_year"
            android:inputType="text"
            android:background="@drawable/roundedrectangle"
            android:paddingStart="16dp"
            android:gravity="center"
            android:paddingEnd="16dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:autofillHints="" />

    </LinearLayout>

    <EditText
        android:id="@+id/InfoBox"
        android:layout_width="399dp"
        android:layout_height="210dp"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:background="@drawable/roundedrectangle"
        android:gravity="center"
        android:hint="@string/car_information"
        android:inputType="textEmailAddress"
        android:paddingStart="16dp"
        android:paddingTop="12dp"
        android:paddingEnd="16dp"
        android:paddingBottom="12dp"
        android:textColorHint="#78909C"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll1" />

    <ImageButton
        android:id="@+id/BackBtn"
        android:layout_width="67dp"
        android:layout_height="49dp"
        android:background="@android:color/transparent"
        android:backgroundTintMode="add"
        android:contentDescription="@string/back_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.018"
        app:srcCompat="@drawable/backarrow"
        tools:ignore="RedundantDescriptionCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>